adding style css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
       <h3>History</h3>
       <ul id="list" class="list">
-        <li class="minus">
+        <!-- <li class="minus">
           Cash <span>-$400</span><button class="delete-btn">x</button>
-        </li>
+        </li> -->
       </ul>
 
       <h3>Add new transaction</h3>
@@ -41,9 +41,9 @@
         <div class="form-control">
           <label for="amount"
             >Amount <br />
-            (negative - expense, positive for income</label
+            (negative - expense, positive for income)</label
           >
-          <input type="amount" id="amount" placeholder="Enter amount..." />
+          <input type="number" id="amount" placeholder="Enter amount..." />
         </div>
         <button class="btn">Add transaction</button>
       </form>
